--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto"
     />
 
-    <title>1 Mart Kısıtlamaları</title>
+    <title>Yerinde Karar Kısıtlamaları</title>
   </head>
 
   <body>
